adding track latest revision end point to swagger
